--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -24,6 +25,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -76,7 +78,7 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">HTML</span>
+                            <span >HTML</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
@@ -98,6 +100,38 @@
                 </div>
             </div>
         </div>
+    </section>
+
+        <section class="services" id="services">
+            <div class="max-width">
+                <h2 class="title">My services</h2>
+                <div class="serv-content">
+                    <div class="card">
+                        <div class="box">
+                            <i class="fas fa-paint-brush"></i>
+                            <div class="text">Web Design</div>
+                            <p>I have 1 year experience in front end web desing using Visual Studio Code.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="box">
+                            <i class="fa fa-camera"></i>
+                            <div class="text">Photography</div>
+                            <p>I have 3 year experience Photography field.i know Photoshop, Lightroom.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="box">
+                            <i class="fas fa-code"></i>
+                            <div class="text">IOS Developer</div>
+                            <p>Currently working as IOS Developer using Xcode and Swift.</p>
+                        </div>
+                    </div>
+                   </div>
+                </div>
+            </div>
+        </section>
+    
     <section class="contact" id="contact">
         <div class="max-width">
             <h2 class="title">Contact me</h2>
@@ -130,25 +164,30 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form id="my form" onsubmit="return validation()">
+                    <form id="submitform" autocomplete="off">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" id="name" required>
+                                <input type="text" placeholder="Name" onkeyup="name1()"  name="name" required id="user">
+                                <p class="er" id="userr"></p>
                             </div>
-                            <div class="field number">
-                                <input type="tel" placeholder="Phone Number" id="phone" required>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" onkeyup="email1()" name="email" required  id="mail">
+                                <p class="er"id="emaill"></p>
                             </div>
                         </div>
-                        <div class="field name">
-                            <input type="email" placeholder="Enter your E-mail" id="email" required>
+                        <div class="field">
+                            <input type="tel" placeholder="Phone" name="phone" onkeyup="phone1()" required="entery" id="phone">
+                            <p class="er" id="phonee"></p>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." id="message" required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="subject" required id="message"></textarea>
+                         <span id="messagee"></span>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
