--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -187,6 +189,10 @@
                             <button type="submit">Send message</button>
                         </div>
                     </form>
+                    <a href="https://www.facebook.com/muhammed.fayaz.129357/" class="fa fa-facebook"></a>
+                    <a href="https://www.linkedin.com/in/muhammed-fayaz-2506721a8/" class="fa fa-linkedin"></a>
+                    <a href="https://www.instagram.com/_.u_n_know_n._/" class="fa fa-instagram"></a>
+                    <a href="https://github.com/FayasFF" class="fa fa-github"></a>
 
                 </div>
             </div>
