--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                             <button type="submit">Send message</button>
                         </div>
                     </form>
-                    <a href="https://www.facebook.com/muhammed.fayaz.129357/" class="fa fa-facebook"></a>
-                    <a href="https://www.linkedin.com/in/muhammed-fayaz-2506721a8/" class="fa fa-linkedin"></a>
-                    <a href="https://www.instagram.com/_.u_n_know_n._/" class="fa fa-instagram"></a>
-                    <a href="https://github.com/FayasFF" class="fa fa-github"></a>
+                    <a href="https://www.facebook.com/muhammed.fayaz.129357/" target="blank" rel="noopener noreferrer" class="fa fa-facebook" ></a>
+                    <a href="https://www.linkedin.com/in/muhammed-fayaz-2506721a8/" target="blank" rel="noopener noreferrer" class="fa fa-linkedin"></a>
+                    <a href="https://www.instagram.com/_.u_n_know_n._/" target="blank" rel="noopener noreferrer" class="fa fa-instagram"></a>
+                    <a href="https://github.com/FayasFF" target="blank" rel="noopener noreferrer" class="fa fa-github"></a>
 
                 </div>
             </div>
