--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
                     <form id="submitform" autocomplete="off">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" onkeyup="name1()"  name="name" required    id="user">
+                                <input type="text" placeholder="Name" onkeyup="name1()"  name="name"   id="user">
                                 <p class="er" id="userr"></p>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" onkeyup="email1()" name="email" required  id="mail">
+                                <input type="email" placeholder="Email" onkeyup="email1()" name="email"  id="mail">
                                 <p class="er"id="emaill"></p>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="tel" placeholder="Phone" name="phone" onkeyup="phone1()" required="entery" id="phone">
+                            <input type="tel" placeholder="Phone" name="phone" onkeyup="phone1()"  id="phone">
                             <p class="er" id="phonee"></p>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." name="subject" required id="message"></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="subject"  id="message"></textarea>
                          <span id="messagee"></span>
                         </div>
                         <div class="button-area">
